# python-pipelines

./: .bumpversion.cfg  .bumpversion.toml  .flake8  .gitignore  LICENSE  Makefile  README.md  requirements.txt
.github/workflows/: docs.yml  python-package.yml
generics/: README.md  pyproject.toml
generics/generics/: __init__.py  generics.py
generics/tests/: test_generics.py
pipeline/: LICENSE  README.md  pyproject.toml  setup.py
pipeline/pipeline/: __init__.py  filesystem_coupled_pipeline.py  filesystem_pipeline.py  library.py  pipeline.py
pipeline/tests/: test_contextual_pipeline.py  test_enhanced_pipeline.py  test_filesystem_pipeline.py  test_library.py  test_pipeline.py
