[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "generyx"
version = "0.4.2"
description = "A Python Library for manipulating Generic Type Hints"
readme = "README.md"
authors = [{ name = "John S. Azariah", email = "john.azariah@gmail.com" }]
license = { file = "LICENSE" }
keywords = ["generics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"

[tool.setuptools]
packages = ["generics"]
