[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypeline"
version = "0.5.0"
description = "A Python library for building pipelines with generyx"
readme = "README.md"
authors = [{ name = "John S. Azariah", email = "john.azariah@gmail.com" }]
license = { file = "LICENSE" }
keywords = ["pipeline", "workflow", "generics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = ["generyx>=0.5.0"]

[tool.setuptools]
packages = ["pipeline"]
